--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "^18.3.1",
     "react-boolflix": "file:",
     "react-dom": "^18.3.1",
-    "react-world-flags": "^1.6.0"
+    "react-slick": "^0.30.3",
+    "react-world-flags": "^1.6.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
